force-app/main/default/objects/GL_Code__c/GL_Code__c.object-meta.xml
<CustomObject>
    <description>GL Code</description>
    <label>GL Code</label>
    <nameField>
        <label>GL Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>