force-app/main/default/objects/GL_Code__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>Business ID</description>
    <externalId>true</externalId>
    <label>Business ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>