force-app/main/default/objects/GL_Code__c/fields/Calculation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Formula__c</fullName>
    <description>Describes which GL Codes Values are used to calculate the value of this GL Code.
Will summarise all children if left blank if the GL Code has children.</description>
    <inlineHelpText>Enter an arithmetic formula expression using the Salesforce Ids of GL codes. 
Allowed characters: + - * / ( ) 
Example: (id + id2) / id3</inlineHelpText>
    <label>Calculation Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>