force-app/main/default/objects/GL_Code__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GL_Code_Category</valueSetName>
    </valueSet>
</CustomField>