force-app/main/default/objects/GL_Code__c/fields/External_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Name__c</fullName>
    <description>The name for this GL Code / data item for display in the web portal.</description>
    <inlineHelpText>This value will be shown instead of the Name if specified.</inlineHelpText>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>