force-app/main/default/objects/GL_Code__c/fields/Line_Item_Input_Length__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Input_Length__c</fullName>
    <label>Line Item Input Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>