force-app/main/default/objects/GL_Code__c/fields/Line_Item_Value_Options__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Value_Options__c</fullName>
    <description>These are the picklist options that providers can choose during form filling.</description>
    <label>Line Item Value Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Cook fresh</fullName>
            </value>
            <value>
                <fullName>Cook chill</fullName>
            </value>
            <value>
                <fullName>Cook freeze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>