force-app/main/default/objects/GL_Code__c/fields/Line_Item_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Value_Type__c</fullName>
    <inlineHelpText>Determines how line items under this GL code will be presented in the form front-end</inlineHelpText>
    <label>Line Item Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hrs</fullName>
            </value>
            <value>
                <fullName>TestInactiveValue</fullName>
                <isActive>false</isActive>
                <label>TestInactiveValue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>