force-app/main/default/objects/GL_Code__c/fields/Parent_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Child GL Codes</relationshipLabel>
    <relationshipName>Child_GL_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>