force-app/main/default/objects/GL_Code__c/fields/run_rules__c.field-meta.xml
<CustomField>
    <fullName>run_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Rules</label>
    <type>Checkbox</type>
</CustomField>