force-app/main/default/objects/GL_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Business_ID__c</columns>
    <columns>Line_Item_Value_Type__c</columns>
    <columns>Parent_GL_Code__c</columns>
    <columns>Display_Order__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>