force-app/main/default/objects/GL_Code__c/listViews/All_Food_and_Nutrition.listView-meta.xml
<ListView>
    <fullName>All_Food_and_Nutrition</fullName>
    <columns>NAME</columns>
    <columns>Business_ID__c</columns>
    <columns>Calculation_Formula__c</columns>
    <columns>Display_Order__c</columns>
    <columns>External_Name__c</columns>
    <columns>Parent_GL_Code__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Food and Nutrition Reporting</value>
    </filters>
    <label>All Food and Nutrition</label>
</ListView>