force-app/main/default/objects/GL_Code__c/listViews/All_Food_Nutrition.listView-meta.xml
<ListView>
    <fullName>All_Food_Nutrition</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Food &amp; Nutrition</label>
</ListView>