force-app/main/default/objects/GL_Code__c/listViews/All_HC_Care.listView-meta.xml
<ListView>
    <fullName>All_HC_Care</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Parent_GL_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Line_Item_Value_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Home Care Labour Costs and Hours</value>
    </filters>
    <label>All HC Care</label>
</ListView>