force-app/main/default/objects/GL_Code__c/listViews/All_Resi_LCH.listView-meta.xml
<ListView>
    <fullName>All_Resi_LCH</fullName>
    <columns>NAME</columns>
    <columns>Business_ID__c</columns>
    <columns>Calculation_Formula__c</columns>
    <columns>Display_Order__c</columns>
    <columns>External_Name__c</columns>
    <columns>Parent_GL_Code__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Residential Labour Costs and Hours</value>
    </filters>
    <label>All Resi LCH</label>
</ListView>