force-app/main/default/objects/GL_Code__c/listViews/All_ResiCare.listView-meta.xml
<ListView>
    <fullName>All_ResiCare</fullName>
    <columns>NAME</columns>
    <columns>Business_ID__c</columns>
    <columns>Type__c</columns>
    <columns>Parent_GL_Code__c</columns>
    <columns>Line_Item_Value_Type__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All ResiCare</label>
</ListView>